--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node dist/app.js",
+    "build": "babel --presets es2015 src -d dist"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
     "fs": "0.0.1-security"
   },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
     "expect": "^1.20.2"
   }
 }
