--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node dist/app.js",
-    "build": "babel --presets es2015 src -d dist"
+    "start": "npm-run-all build open:dist",
+    "build": "babel --presets es2015 src -d dist",
+    "open:dist": "node dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
-    "expect": "^1.20.2"
+    "expect": "^1.20.2",
+    "npm-run-all": "^3.1.2"
   }
 }
