--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "npm-run-all build open:dist",
+    "lint": "node_modules/.bin/eslint src/**",
+    "lint:watch": "npm run lint -- --watch",
     "build": "babel --presets es2015 src -d dist",
     "open:dist": "node dist/app.js"
   },
@@ -24,6 +26,7 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
+    "eslint": "^3.12.2",
     "expect": "^1.20.2",
     "npm-run-all": "^3.1.2"
   }
