--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "npm-run-all build open:dist",
-    "lint": "node_modules/.bin/eslint src/**",
+    "start": "npm-run-all lint build open:dist",
+    "lint": "node_modules/.bin/esw src/**",
     "lint:watch": "npm run lint -- --watch",
     "build": "babel --presets es2015 src -d dist",
     "open:dist": "node dist/app.js"
@@ -27,6 +27,7 @@
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "eslint": "^3.12.2",
+    "eslint-watch": "^2.1.14",
     "expect": "^1.20.2",
     "npm-run-all": "^3.1.2"
   }
